[package]
name = "xr_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_mod_openxr = {git = "https://github.com/awtterpip/bevy_oxr/", features = ["vulkan", "d3d12"]}
bevy_mod_xr = {git = "https://github.com/awtterpip/bevy_oxr/"}
bevy_rapier3d = "0.28.0"
openxr = "0.19.0"
serde = {version = "1.0.217", features = ["serde_derive"] }
toml = "0.8.19"
